# nornir-napalm-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.example.yaml  config.yaml  models.py  pyproject.toml  runner.py  server.py
inventory/: defaults.yaml  groups.yaml  hosts.yaml
nornir_napalm_mcp/: __init__.py  __main__.py  introspection.py  main.py  models.py  runner.py  server.py  tasks.py
tests/: conftest.py  test_cli.py  test_helpers.py  test_runner.py  test_server.py  test_tasks.py
