[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nornir-napalm-mcp"
version = "0.1.0"
description = "FastMCP server exposing network device data via Nornir + NAPALM"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastmcp>=2.0",
    "nornir>=3.4",
    "nornir-napalm>=0.4",
    "napalm>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "mypy",
    "pytest-cov>=7.1.0",
]

[project.scripts]
nornir-napalm-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

# ---------------------------------------------------------------------------
# Ruff linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "once::DeprecationWarning",
]
