[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nornir-napalm-mcp"
dynamic = ["version"]
description = "FastMCP server exposing network device data via Nornir + NAPALM"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastmcp>=2.0",
    "nornir>=3.4",
    "nornir-napalm>=0.4",
    "napalm>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "mypy",
    "pytest-cov>=7.1.0",
]

[project.scripts]
nornir-napalm-mcp = "nornir_napalm_mcp.server:main"

[tool.hatch.version]
path = "nornir_napalm_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["nornir_napalm_mcp"]

# ---------------------------------------------------------------------------
# Ruff linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "once::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
